
include $(top_srcdir)/Makefile.am.common

noinst_HEADERS = ec.h \
                 ec_debug.h \
                 ec_error.h \
                 ec_globals.h \
                 ec_parser.h \
                 ec_proto.h \
                 ec_packet.h \
                 ec_signals.h \
                 ec_stdint.h \
                 ec_ui.h \
                 ec_version.h \
                 ec_threads.h \
                 ec_capture.h \
                 ec_dispatcher.h \
                 ec_send.h \
                 ec_sniff.h \
                 ec_sniff_unified.h \
                 ec_sniff_bridge.h \
                 ec_sniff_arp.h \
                 ec_inet.h \
                 ec_resolv.h \
                 ec_checksum.h \
                 ec_scan.h \
                 ec_hook.h \
                 ec_file.h \
                 ec_log.h \
                 ec_profiles.h \
                 ec_decode.h \
                 ec_dissect.h \
                 ec_fingerprint.h \
                 ec_passive.h \
                 ec_hash.h \
                 ec_manuf.h \
                 ec_poll.h \
                 ec_session.h \
                 ec_interfaces.h \
                 ec_plugins.h \
                 ec_format.h \
                 el.h \
                 el_functions.h
   
EXTRA_DIST = missing/*

CLEANFILES = *.log *.out core.* *~ .*swp

# vim:ts=4:expandtab             
